# TPA-VLA

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example_paths.yaml  expert_source_grid_example.yaml  pipeline_example.yaml
docs/: release_audit.md  reproducibility.md
scripts/: audit_release.py  eval_cached_policy.py  extract_hidden_cache.py  make_toy_cache.py  run_expert_source_grid.py  run_tpa_pipeline.py  shared_serving_sim.py  task_switch_overhead_microbenchmark.py  train_phase1_expert.py  train_phase2_query.py
tpa_vla/: __init__.py  constants.py  data.py  modules.py  utils.py
