[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tpa-vla"
version = "0.1.0"
description = "Core implementation for Two-Phase Adaptation VLA."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.2",
    "numpy",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
libero = [
    "draccus==0.8.0",
    "opencv-python",
    "pillow",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tpa_vla*"]

[tool.ruff]
line-length = 120
target-version = "py310"
